--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 .panel {
-  border: 1px solid blue;
+  border: 1px dotted blue;
   background-color: red;
   height: 1em;
   width: 1em;
