--- a/styles/style.css
+++ b/styles/style.css
@@ -3,20 +3,42 @@
   padding: 0;
 }
 
-html {
+html,
+body {
   height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#reset {
+  display: block;
+  padding: 1em;
+  margin: 1em;
 }
 
 #container {
+  height: 600px;
+  width: 600px;
+  border: 15px solid green;
+  border-radius: 15px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  flex-direction: column;
 }
 
-.panel {
+.row {
+  display: flex;
+  flex: 1;
+}
+
+.column {
+  border: 1px solid rgb(1, 0, 0);
+  flex: 1;
+}
+
+#container div {
   border: 1px dotted blue;
   background-color: red;
-  height: 1em;
-  width: 1em;
 }
