Add controls for grid size
Add HTML inputs and JavaScript code for changing the size of the
container. Also change styles to reflect input changes. Still needs
cleaned up and some guard rails to not generate too many divs.

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,10 +13,14 @@ body {
   justify-content: center;
 }
 
-#reset {
-  display: block;
-  padding: 1em;
+.controls button {
+  padding: 0.5em 1em;
   margin: 1em;
+}
+
+#grid-size-input {
+  padding: 0.5em;
+  text-align: center;
 }
 
 #container {
