--- a/media/style.css
+++ b/media/style.css
@@ -22,8 +22,6 @@ body {
   background-color: lightcoral;
   border-radius: 10px;
   margin-bottom: 10px;
-  position: relative;
-  z-index: 2;
 }
 
 label {
@@ -57,8 +55,6 @@ input {
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  position: relative;
-  z-index: 2;
 }
 
 .row {
@@ -77,7 +73,6 @@ input {
 }
 
 /* Snowfall animation */
-
 #snow-container {  
   height: 100vh;
   overflow: hidden;
@@ -85,7 +80,7 @@ input {
   top: 0;
   transition: opacity 500ms;
   width: 100%;
-  z-index: 1;
+  pointer-events: none;
 }
 
 .snow {
